--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.studentessentials"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.011" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -12,7 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:debuggable="true"
+        android:theme="@style/AppTheme"
+        android:name="com.example.studentessentials.MyApplication" >
         <activity
             android:name="com.example.studentessentials.LoginActivity"
             android:label="@string/app_name" >
@@ -27,5 +29,7 @@
             android:label="@string/title_activity_main" >
         </activity>
     </application>
-
+    
+	​<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
